<resources>
    <string name="app_name">HouseManager</string>
    <string name="paper">排查日报</string>
    <string name="form">统计表单</string>
    <string name="map">排查地图</string>
    <string name="person">个人中心</string>

    <!--login-->
    <string name="login_title">深圳市房屋排查系统</string>
    <string name="job_login">工号登陆</string>
    <string name="iphone_login">手机登陆</string>
    <string name="input_id">请输入工号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">提交登陆</string>
    <string name="input_iphone_number">请输入手机号码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="input_dynamic_code">请输入动态验证码</string>
    <!--loading-->
    <string name="defeated">抱歉出错了！</string>
    <string name="defeated_text">表单没有批量上传成功，请检查网络连接并重新长传</string>
    <string name="ok">好的</string>
    <string name="succeed">恭喜操作成功！</string>
    <string name="succeed_text">您的信息已经成功提交，您可以在列表页重新查看</string>
    <string name="titie_map">统计地图</string>
    <string name="title_form">楼房列表</string>
    <string name="title_paper">我的日报</string>
    <string name="step">今日步数: 64444</string>
</resources>
