<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="36.5dp"
            android:src="@mipmap/logo_move" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_title"
            android:textSize="22.5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/semi_round_backgroud">

            <Button
                android:id="@+id/job_login"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/semi_round_button2"
                android:gravity="center"
                android:text="@string/job_login"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/iphone_login"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/transparency"
                android:gravity="center"
                android:text="@string/iphone_login"
                android:textColor="@color/login_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/semi_round_edittext"
                android:gravity="center"
                android:hint="@string/input_id"
                android:singleLine="true" />

            <Button
                android:id="@+id/get_auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/semi_round_button"
                android:text="@string/get_auth_code"
                android:textColor="@color/white"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/semi_round_edittext"
                android:gravity="center"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/semi_round_button"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>