<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98.5dp"
        android:background="@drawable/defeated"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/defeated"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="left"
            android:text="@string/defeated_text"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/defeated_line" />
    <TextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="60.5dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12dp"
        android:background="@color/defeated_ok" />
</LinearLayout>