<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
   <RelativeLayout
       android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"></RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_buttom"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="65dp">
       <LinearLayout
           android:id="@+id/bt_paper"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:orientation="vertical"
           android:layout_height="match_parent">
           <View
               android:id="@+id/line"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/line"></View>
           <ImageView
               android:id="@+id/iv_rb"
               android:layout_width="25dp"
               android:layout_height="20dp"
               android:layout_marginTop="10dp"
               android:layout_gravity="center"
               android:src="@drawable/icon_rb_active"/>
           /*日报*/
           <TextView
               android:id="@+id/tv_rb"
               android:layout_marginTop="10dp"
               android:layout_gravity="center"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textColor="@color/font"
               android:text="@string/paper">
           </TextView>
       </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line">
        </View>
        <LinearLayout
            android:id="@+id/bt_form"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"></View>
            <ImageView
                android:id="@+id/iv_form"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_bd"
                />
            /*表单*/
            <TextView
                android:id="@+id/tv_form"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:textColor="@color/line"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:text="@string/form">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line">
        </View>
        <LinearLayout
            android:id="@+id/bt_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"></View>
            <ImageView
                android:id="@+id/iv_map"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_dt"
                />
            /*地图*/
            <TextView
                android:id="@+id/tv_map"
                android:layout_width="wrap_content"
                android:textColor="@color/line"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:text="@string/map">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line">
        </View>
        <LinearLayout
            android:id="@+id/bt_person"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"></View>
            <ImageView
                android:id="@+id/iv_person"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_zx"
                />
            /*个人中心*/
            <TextView
                android:id="@+id/tv_person"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:textColor="@color/line"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:text="@string/person">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>